--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,28 @@
-server.port:8094
+server.port:8084
+
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:~/test
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.databse-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+# App config
+spring.application.name=BootMongo
+server.context-path=/user
+app.name=Muzix
+
+# Feeder Data
+song.total=3
+
+song.1.id=1
+song.1.name=Bohemian Rhapsody
+song.1.comment=The best song ever written
+song.2.id=2
+song.2.name=Radio Ga Ga
+song.2.comment=Radio, we still love you
+song.3.id=3
+song.3.name=Another one bites the dust
+song.3.comment=My personal favorite
+
